# Cellinguist

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
cellinguist/: cell_embeddings.py  cell_typing.py  cytokine_inference.py  gene_embeddings.py  gene_warm_start.py  pseudotime.py  pseudotime_training.py  training.py  training_dev.py
cellinguist/data/: data_funcs.py
cellinguist/models/: base_model.py  cell_type_model.py  gene2vec_model.py  loss.py  pseudotime_model.py
data/: sorted_cell_types_anndata_test_2k_250805.h5ad
src/cellinguist/: cli.py  config.py  embeddings.py  losses.py
src/cellinguist/configs/: cbow_config.yml  vae_export.yml  vae_train.yml
src/cellinguist/data/: datasets.py
src/cellinguist/models/: cbow.py  conditioner.py  decoder.py  encoder.py  vae.py  vae_perturb.py
src/cellinguist/scripts/: export_cbow_vae_cell_embeddings.py  export_cell_embeddings.py  export_gene_embeddings.py  export_perceiver_cell_embeddings.py  export_perceiver_gene_embeddings.py  export_vae_predictions.py  extract_cell_embeddings_cbow.sh  extract_cell_embeddings_from_cbow.py  fit_cbow_embeddings.py  fit_vae_model.py
src/cellinguist/tests/: cbow_model_tests.py  datasets_tests.py  test_perturbation_pipeline.py  vae_model_test.py
src/cellinguist/train/: train_cbow.py  train_vae.py
src/cellinguist/utils/: perturbation_split.py  vae_io.py
